# ziv

./: .gitignore  Cargo.toml  PKGBUILD  README.md  TODO.md  config.toml
install/: ziv.desktop
scripts/: Open Directory In Dolphin  Open In Firefox
ziv/: Cargo.toml
ziv/src/: args.rs  config.rs  dir_reader.rs  dirs.rs  main.rs  shortcut.rs  util.rs
ziv/src/dir_reader/: entries.rs  entry.rs  read_thread.rs  sort_order.rs  sort_thread.rs
ziv/src/dir_reader/entry/: image.rs  key.rs  loaded_displays.rs  loaded_thumbnails.rs  source.rs  thumbnail.rs  thumbnail_db.rs  thumbnails.rs  video.rs
ziv/src/dir_reader/entry/thumbnail_db/sql/: add_thumbnail.sql  get_thumbnail.sql  schema.sql
ziv/src/util/: config.rs  loadable.rs  loadable_lru.rs  priority_thread_pool.rs  smart_texture_handle.rs  try_control_flow.rs
