[workspace]

members  = ["ziv"]
resolver = "2"

[workspace.package]
authors     = ["filipejacintorodrigues1@gmail.com"]
description = "Zenithsiz's image viewer"
edition     = "2024"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/zenithsiz/ziv"
version     = "0.1.8"

[workspace.dependencies]

# Workspace
ziv = { path = "ziv" }

app-error             = "0.1.0"
bitflags              = "2.11.0"
clap                  = "4.6.0"
derive_more           = "2.1.1"
directories           = "6.0.0"
eframe                = "0.34.1"
egui                  = "0.34.1"
either                = "1.15.0"
extend                = "1.2.0"
ffmpeg-next           = "8.1.0"
humansize             = "2.1.3"
image                 = "0.25.10"
indexmap              = "2.13.0"
indexset              = "0.15.0"
itertools             = "0.14.0"
libc                  = "0.2.183"
md5                   = "0.8.0"
natord                = "1.0.9"
notify                = "8.2.0"
notify-debouncer-full = "0.7.0"
oneshot               = "0.2.1"
opener                = "0.8.4"
parking_lot           = "0.12.5"
ref-cast              = "1.0.25"
serde                 = "1.0.228"
strum                 = "0.28.0"
time                  = "0.3.47"
toml                  = "1.1.0"
tracing               = "0.1.44"
url                   = "2.5.8"
walkdir               = "2.5.0"
zip                   = "8.4.0"
zutil-cloned          = "0.1.0"
zutil-logger          = "0.1.0"

[workspace.lints]

rust.unexpected_cfgs = { check-cfg = ['cfg(rust_analyzer)'], level = "warn" }

clippy.nursery  = { level = "warn", priority = -1 }
clippy.pedantic = { level = "warn", priority = -1 }

clippy.unnecessary_self_imports = "warn"

# Style
clippy.match_bool         = "allow"
clippy.option_if_let_else = "allow"
clippy.similar_names      = "allow"
clippy.single_match_else  = "allow"
clippy.struct_field_names = "allow"

# Misc
clippy.empty_enums                  = "allow"
clippy.items-after-statements       = "allow"
clippy.unnecessary_debug_formatting = "allow"
clippy.wildcard_imports             = "allow"

# TODO:
clippy.cast_possible_truncation    = "allow"
clippy.cast_precision_loss         = "allow"
clippy.cast_sign_loss              = "allow"
clippy.collapsible_if              = "allow"
clippy.missing_errors_doc          = "allow"
clippy.missing_panics_doc          = "allow"
clippy.significant_drop_tightening = "allow"
clippy.suboptimal_flops            = "allow"
clippy.too_many_lines              = "allow"
