[package]
edition     = { workspace = true }
name        = "ziv"
description = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
version     = { workspace = true }
repository  = { workspace = true }

[package.metadata.deb]
assets = [{ source = "../install/ziv.desktop", dest = "/usr/share/applications/ziv.desktop", mode = "644" }]

[dependencies]

app-error             = { workspace = true }
bitflags              = { workspace = true }
clap                  = { features = ["derive"], workspace = true }
derive_more           = { features = ["full"], workspace = true }
directories           = { workspace = true }
eframe                = { workspace = true }
egui                  = { features = ["serde"], workspace = true }
either                = { workspace = true }
extend                = { workspace = true }
ffmpeg-next           = { workspace = true }
humansize             = { workspace = true }
image                 = { features = ["default-formats"], workspace = true }
indexmap              = { workspace = true }
indexset              = { workspace = true }
itertools             = { workspace = true }
libc                  = { workspace = true }
md5                   = { workspace = true }
natord                = { workspace = true }
notify                = { workspace = true }
notify-debouncer-full = { workspace = true }
oneshot               = { workspace = true }
opener                = { features = ["reveal"], workspace = true }
parking_lot           = { workspace = true }
ref-cast              = { workspace = true }
serde                 = { features = ["derive", "unstable"], workspace = true }
strum                 = { features = ["derive"], workspace = true }
time                  = { workspace = true }
toml                  = { workspace = true }
tracing               = { workspace = true }
url                   = { workspace = true }
walkdir               = { workspace = true }
zip                   = { workspace = true }
zutil-cloned          = { workspace = true }
zutil-logger          = { workspace = true }

[lints]
workspace = true
